Bold rather than italic for list items

--- a/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
+++ b/content/blog/how-i-built-a-serverless-search-for-my-blog.asciidoc
@@ -63,11 +63,11 @@ And to be honest, I also just fancied the prospect of solving the problem by mys
 First of all, let's discuss why I opted for a Serverless solution.
 It boils down to three reasons:
 
-* _Security:_ While it'd only cost a few EUR per month to set up a VM with a cloud provider like Digital Ocean or Hetzner, having to manage a full operating system installation would require too much of my attention; I don't want someone to mine bitcoins or doing other nasty things on a box I run, just because I failed to apply some security patch
-* _Cost:_ Serverless does not only promise to scale-out (and let's be honest, there likely won't be millions of search queries on my blog every month), but also scale-to-zero.
+* *Security:* While it'd only cost a few EUR per month to set up a VM with a cloud provider like Digital Ocean or Hetzner, having to manage a full operating system installation would require too much of my attention; I don't want someone to mine bitcoins or doing other nasty things on a box I run, just because I failed to apply some security patch
+* *Cost:* Serverless does not only promise to scale-out (and let's be honest, there likely won't be millions of search queries on my blog every month), but also scale-to-zero.
 As Serverless is pay-per-use and there are free tiers in place e.g. for AWS Lambda,
 this service ideally should cost me just a few cents per month
-* _Learning Opportunity:_ Last but not least, this also should be a nice occasion for me to dive into the world of Serverless, by means of designing, developing and running a solution for a real-world problem, exploring how Java as my preferred programming language can be used for this task
+* *Learning Opportunity:* Last but not least, this also should be a nice occasion for me to dive into the world of Serverless, by means of designing, developing and running a solution for a real-world problem, exploring how Java as my preferred programming language can be used for this task
 
 == Solution Overview
 
@@ -104,10 +104,10 @@ which takes incoming HTTP requests, maps them to calls of the function and conve
 Now let's dive down a bit more into the specific parts of the solution.
 Overall, there are four steps involved:
 
-* _link:#_data_extraction[Data extraction:]_ The blog contents to be indexed must be extracted and converted into an easy-to-process data format
-* _link:#_search_backend_implementation[Search backend implementation:]_ A small HTTP service is needed which exposes the search functionality of Apache Lucene, which in particular requires some steps to enable Lucene being used in a native GraalVM binary
-* _link:#_wiring_things_up[Integration with the website:]_ The search service must be integrated into the static site on GitHub Pages
-* _link:#_deployment_to_aws_lambda[Deployment:]_ Finally, the search service needs to be deployed to AWS API Gateway and Lambda
+* *link:#_data_extraction[Data extraction:]* The blog contents to be indexed must be extracted and converted into an easy-to-process data format
+* *link:#_search_backend_implementation[Search backend implementation:]* A small HTTP service is needed which exposes the search functionality of Apache Lucene, which in particular requires some steps to enable Lucene being used in a native GraalVM binary
+* *link:#_wiring_things_up[Integration with the website:]* The search service must be integrated into the static site on GitHub Pages
+* *link:#_deployment_to_aws_lambda[Deployment:]* Finally, the search service needs to be deployed to AWS API Gateway and Lambda
 
 == Data Extraction
 
@@ -669,9 +669,9 @@ While the search functionality is rolled out on my blog,
 ready for you to use,
 there's a few things I'd like to improve and expand going forward:
 
-* _CI pipeline:_ Automatically re-building and deploying the search service after changes to the contents of my blog; this should hopefully be quite easy using GitHub Actions
-* _Performance improvements:_ While the performance of the query service definitely is good enough, I'd like to see whether and how it could be tuned here and there. Tooling might be challenging there; where I'd use JDK Flight Recorder and Mission Control with a JVM based application, I'm much less familiar with equivalent tooling for native binaries. One option I'd like to explore in particular is taking advantage of Quarkus bytecode recording capability: bytecode instructions for creating the in-memory data structure of the Lucene index could be recorded at build time and then just be executed at application start-up; this might be the fastest option for loading the index in my special use case of a read-only index
-* _Serverless comments:_ Currently I'm using Disqus for the commenting feature of the blog. It's not ideal in terms of privacy and page loading speed, which is why I'm looking for alternatives. One idea could be a custom Serverless commenting functionality, which would be very interesting to explore, in particular as it shifts the focus from a purely immutable application to a stateful service that'll require some means of modifiable, persistent storage
+* *CI pipeline:* Automatically re-building and deploying the search service after changes to the contents of my blog; this should hopefully be quite easy using GitHub Actions
+* *Performance improvements:* While the performance of the query service definitely is good enough, I'd like to see whether and how it could be tuned here and there. Tooling might be challenging there; where I'd use JDK Flight Recorder and Mission Control with a JVM based application, I'm much less familiar with equivalent tooling for native binaries. One option I'd like to explore in particular is taking advantage of Quarkus bytecode recording capability: bytecode instructions for creating the in-memory data structure of the Lucene index could be recorded at build time and then just be executed at application start-up; this might be the fastest option for loading the index in my special use case of a read-only index
+* *Serverless comments:* Currently I'm using Disqus for the commenting feature of the blog. It's not ideal in terms of privacy and page loading speed, which is why I'm looking for alternatives. One idea could be a custom Serverless commenting functionality, which would be very interesting to explore, in particular as it shifts the focus from a purely immutable application to a stateful service that'll require some means of modifiable, persistent storage
 
 In the meantime, you can find the https://github.com/gunnarmorling/search.morling.dev[source code] of the Serverless search feature on GitHub. Feel free to take the code and deploy it to your own website!
 
