--- a/content/blog/plugin-architectures-with-layrry-and-the-java-module-system.asciidoc
+++ b/content/blog/plugin-architectures-with-layrry-and-the-java-module-system.asciidoc
@@ -117,9 +117,9 @@ package "greeter-app" {
 
 The application is made up of five different layers:
 
-* _greeter-platform_: contains the `Greeter` and `GreeterFactory` contracts
-* _greeter-en_, _greeter-de_ and _greeter-fr_: greeter implementations for different languages; note how each one is depending on a different version of some _greeter-date_ module. As they are isolated in different layers, they can co-exist within the application
-* _greeter-app_: the "shell" of the application which loads all the greeter implementations and makes them accessible as a simple CLI application
+* *greeter-platform*: contains the `Greeter` and `GreeterFactory` contracts
+* *greeter-en*, *greeter-de* and *greeter-fr*: greeter implementations for different languages; note how each one is depending on a different version of some _greeter-date_ module. As they are isolated in different layers, they can co-exist within the application
+* *greeter-app*: the "shell" of the application which loads all the greeter implementations and makes them accessible as a simple CLI application
 
 Now let's see how this application structure can be assembled using Layrry.
 
