--- a/content/blog/resource-bundle-lookups-in-modular-java-applications.asciidoc
+++ b/content/blog/resource-bundle-lookups-in-modular-java-applications.asciidoc
@@ -387,9 +387,9 @@ When using Apache Maven, only two plug-ins need to be configured:
 
 Let's wrap up and evaluate whether the proposed implementation satisfies our original requirements:
 
-* _Modules of the application contribute bundles with their specific error messages:_ ✅  Each module of the Links application can provide its own bundle(s), using a specific key prefix; we could even take it a step further and provide bundles via separate i18n modules, for instance created by an external translation agency, independent from the development teams
-* _Central error handler component can use these bundles for displaying or logging the error messages:_ ✅  The error handler in the _core_ module can retrieve messages from all the bundles in the different modules, freeing the developers of the application modules from details like adding the user's name to the final messages
-* _No knowledge about the specific modules in the central component:_ ✅  Thanks to the different providers (or the custom `Control`, respectively), there is no need for registering the specific bundles with the error handler in the _core_ module; further modules could be added to the Links application and the error handler would be able to obtain messages from the resource bundles contributed by them
+* *Modules of the application contribute bundles with their specific error messages:* ✅  Each module of the Links application can provide its own bundle(s), using a specific key prefix; we could even take it a step further and provide bundles via separate i18n modules, for instance created by an external translation agency, independent from the development teams
+* *Central error handler component can use these bundles for displaying or logging the error messages:* ✅  The error handler in the _core_ module can retrieve messages from all the bundles in the different modules, freeing the developers of the application modules from details like adding the user's name to the final messages
+* *No knowledge about the specific modules in the central component:* ✅  Thanks to the different providers (or the custom `Control`, respectively), there is no need for registering the specific bundles with the error handler in the _core_ module; further modules could be added to the Links application and the error handler would be able to obtain messages from the resource bundles contributed by them
 
 With a little bit of extra effort, it also was possible to design the code in the _core_ module in a way that the application can be used with different Java versions and configurations:
 on the module path with Java 9+, on the classpath with Java 9+, on the classpath with Java 8.
