--- a/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
+++ b/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
@@ -246,9 +246,9 @@ docker-compose up --build
 
 This builds the project using Maven and spins up the following services using Docker Compose:
 
-* _example-service_: The Todo example application
-* _todo-db_: The Postgres database used by the Todo service
-* _prometheus_ and _grafana_: For monitoring live events later on
+* *example-service*: The Todo example application
+* *todo-db*: The Postgres database used by the Todo service
+* *prometheus* and *grafana*: For monitoring live events later on
 
 Then go to http://localhost:8080/todo[http://localhost:8080/todo], where you should see the Todo web application:
 
