--- a/content/blog/running-quarkus-native-app-on-render.asciidoc
+++ b/content/blog/running-quarkus-native-app-on-render.asciidoc
@@ -92,17 +92,17 @@ image::render_new_web_service.png[]
 
 On the following page, enter the following information:
 
-* _Name:_ A unique name for your new application
-* _Region:_ Choose where your application should be deployed
-* _Environment:_ Choose Docker here, then "Free" plan
-* _Dockerfile Path (under "Advanced"):_ Specify _./src/main/docker/Dockerfile.render_; this is a very https://github.com/gunnarmorling/quarkus-on-render/blob/main/src/main/docker/Dockerfile.render[simple Dockerfile] which has the sole purpose of letting Render build an image for deployment; it simply is derived from the actual image with the application which is deployed to Docker Hub:
+* *Name:* A unique name for your new application
+* *Region:* Choose where your application should be deployed
+* *Environment:* Choose Docker here, then "Free" plan
+* *Dockerfile Path (under "Advanced"):* Specify _./src/main/docker/Dockerfile.render_; this is a very https://github.com/gunnarmorling/quarkus-on-render/blob/main/src/main/docker/Dockerfile.render[simple Dockerfile] which has the sole purpose of letting Render build an image for deployment; it simply is derived from the actual image with the application which is deployed to Docker Hub:
 +
 [source,Dockerfile,linenums=true]
 ----
 FROM gunnarmorling/quarkus-on-render:latest
 ----
 +
-* _Deploy Hook:_ Note down this generated URL, you will need it later when configuring the deployment trigger with GitHub Actions
+* *Deploy Hook:* Note down this generated URL, you will need it later when configuring the deployment trigger with GitHub Actions
 
 == Docker Hub Access Token
 
