--- a/content/blog/the-code-review-pyramid.asciidoc
+++ b/content/blog/the-code-review-pyramid.asciidoc
@@ -29,14 +29,14 @@ You can also download the visual as an link:/images/code_review_pyramid.svg[SVG 
 
 == FAQ
 
-* _Why is it a pyramid?_
+* *Why is it a pyramid?*
 +
 The lower parts of the pyramid should be the foundation of a code review and take up the most part of it.
 
-* _Hey, that's a triangle!_
+* *Hey, that's a triangle!*
 +
 You might think so, but it's a pyramid from the side.
 
-* _Which tool did you use for creating the drawing?_
+* *Which tool did you use for creating the drawing?*
 +
 https://excalidraw.com/[Excalidraw].
