--- a/content/blog/whats-on-my-desk.asciidoc
+++ b/content/blog/whats-on-my-desk.asciidoc
@@ -160,11 +160,11 @@ before scaling it back down to the CX11 instance again.
 So let's change topics and talk a bit about my recording set-up.
 There's essentially three scenarios where I need to record myself and/or my screen:
 
-* _Video calls:_ working 100% from home in a globally distributed development team,
+* *Video calls:* working 100% from home in a globally distributed development team,
 there's not a single day where I won't have to do at least a couple of calls with my co-workers
-* _Conference talks:_ with the global pandemic still going on,
+* *Conference talks:* with the global pandemic still going on,
 all the conferences have gone virtual, requiring either to pre-record or live-stream any talks
-* _Demos:_ lately, I've become a fan of recording short videos introducing new features in the projects I'm involved with, e.g. the https://debezium.io/blog/2020/10/22/towards-debezium-ui/[Debezium UI] or https://github.com/kcctl/kcctl[kcctl]
+* *Demos:* lately, I've become a fan of recording short videos introducing new features in the projects I'm involved with, e.g. the https://debezium.io/blog/2020/10/22/towards-debezium-ui/[Debezium UI] or https://github.com/kcctl/kcctl[kcctl]
 
 Additionally, I'm joining https://twitter.com/nipafx[Nicolai Parlog] once per month on his https://www.twitch.tv/nipafx[Twitch channel],
 where we talk about and explore all things Java.
