--- a/content/blog/whats-in-a-good-error-message.asciidoc
+++ b/content/blog/whats-in-a-good-error-message.asciidoc
@@ -19,9 +19,9 @@ Error messages lacking this kind of information quickly create a feeling of frus
 So what makes a good error message then?
 To me, it boils down to three pieces of information which should be conveyed by an error message:
 
-* _Context:_ What led to the error? What was the code trying to do when it failed?
-* _The error itself:_ What exactly failed?
-* _Mitigation:_ What needs to be done in order to overcome the error?
+* *Context:* What led to the error? What was the code trying to do when it failed?
+* *The error itself:* What exactly failed?
+* *Mitigation:* What needs to be done in order to overcome the error?
 
 <!--more-->
 
@@ -149,12 +149,12 @@ Nothing is more frustrating than essentially being told "You did it wrong!", wit
 
 Lastly, some practices in regards to error messages which I try to adhere to, and which I would generally recommend:
 
-* _Uniform voice and style:_ The specific style chosen doesn't matter too much, but you should settle on either active vs. passive voice ("couldn't parse config file" vs. "config file couldn't be parsed"), apply consistent casing, either finish or not finishes messages with a dot, etc.; not a big thing, but it will make your messages a bit easier to deal with
-* _One concept, one term_: Avoid referring to the same concept from your domain using different terms in different error messages; similarly, avoid using the same term for multiple things. Use the same terms as in other places, e.g. your API documentation, reference guides etc.; The more consisent and unambiguous you are, the better
-* _Don't localize error messages:_ This one is not as clear cut, but I'd generally recommend to not translate error messages into other languages than English; Again, this all is not about user-facing error messages, but about messages geared towards software developers and ops folks, who generally should command reasonable English skills; depending on your audience and target market, translations to specific languages might make sense, in which case a common, unambiguous error code should definitely be part of messages, so as to facilitate searching for the error on the internet
-* _Don't make error messages an API contract:_ In case consumers of your API should be able to react to different kinds of errors, they should not be required to parse any error messages in order to do so. Instead, raise an exception type which exposes a machine-processable error code, or raise specific exception types which can be caught separately by the caller
-* _Be cautious about exposing sensitive data:_ if your library is in the business of handling and processing sensitive user data, make sure to to not create any privacy concerns; for instance, "show actual vs. expected value" may not pose a problem for values provided by an application developer or administrator; but it can pose a problem if the actual value is GDPR protected user data
-* _Either raise an exception OR log an error, but not both:_ A given error should either be communicated by raising an exception or by logging an error. Otherwise, when doing both, as the exception will typically end up being logged via some kind of generic handler anyways, the user would see information about the same error in their logs twice, which only adds confusion
-* _Fail early:_ This one is not so much about how to express error messages, but when to raise them; in general, the earlier, the better; a message at application start-up beats one later at runtime; a message at build time beats one at start-up, etc. Quicker feedback makes for shorter turn-around times for fixes and also helps to provide the context of any failures
+* *Uniform voice and style*: The specific style chosen doesn't matter too much, but you should settle on either active vs. passive voice ("couldn't parse config file" vs. "config file couldn't be parsed"), apply consistent casing, either finish or not finishes messages with a dot, etc.; not a big thing, but it will make your messages a bit easier to deal with
+* *One concept, one term*: Avoid referring to the same concept from your domain using different terms in different error messages; similarly, avoid using the same term for multiple things. Use the same terms as in other places, e.g. your API documentation, reference guides etc.; The more consisent and unambiguous you are, the better
+* *Don't localize error messages*: This one is not as clear cut, but I'd generally recommend to not translate error messages into other languages than English; Again, this all is not about user-facing error messages, but about messages geared towards software developers and ops folks, who generally should command reasonable English skills; depending on your audience and target market, translations to specific languages might make sense, in which case a common, unambiguous error code should definitely be part of messages, so as to facilitate searching for the error on the internet
+* *Don't make error messages an API contract*: In case consumers of your API should be able to react to different kinds of errors, they should not be required to parse any error messages in order to do so. Instead, raise an exception type which exposes a machine-processable error code, or raise specific exception types which can be caught separately by the caller
+* *Be cautious about exposing sensitive data*: if your library is in the business of handling and processing sensitive user data, make sure to to not create any privacy concerns; for instance, "show actual vs. expected value" may not pose a problem for values provided by an application developer or administrator; but it can pose a problem if the actual value is GDPR protected user data
+* *Either raise an exception OR log an error, but not both*: A given error should either be communicated by raising an exception or by logging an error. Otherwise, when doing both, as the exception will typically end up being logged via some kind of generic handler anyways, the user would see information about the same error in their logs twice, which only adds confusion
+* *Fail early*: This one is not so much about how to express error messages, but when to raise them; in general, the earlier, the better; a message at application start-up beats one later at runtime; a message at build time beats one at start-up, etc. Quicker feedback makes for shorter turn-around times for fixes and also helps to provide the context of any failures
 
 With that all being said, what's your take on the matter? Any best practices you would recommend? Do you have any examples for particularly well (or poorly) crafted messages? Let me know in the comments below!
